--- a/templates/default/load.monitrc.erb
+++ b/templates/default/load.monitrc.erb
@@ -1,4 +1,4 @@
-check system <%= node[:host] %>
+check system <%= node["fqdn"] %>
   if loadavg (1min) > 4 for 2 cycles then alert
   if loadavg (5min) > 2 for 2 cycles then alert
   if memory usage > 75% for 2 cycles then alert
