--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -8,8 +8,11 @@ set logfile syslog facility log_daemon
 set logfile <%= node["monit"]["logfile"] %>
 <% end %>
 
+<% if node['monit']['mail_alerts'] %>
 # Mail alerts
 set alert <%= node["monit"]["alert_email"] %>
+<% end %>
+
 set mailserver <%= node["monit"]["mail"]["hostname"] %> port <%= node["monit"]["mail"]["port"] %>
   <% if node["monit"]["mail"]["username"] -%>
   username "<%= node["monit"]["mail"]["username"] %>"
