--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -37,7 +37,9 @@ set mail-format {
 <% if node["monit"]["web_interface"]["enable"] %>
 # Web interface
 set httpd port <%= node["monit"]["web_interface"]["port"] %> and
+  <% if node["monit"]["web_interface"]["address"] %>
   use address <%= node["monit"]["web_interface"]["address"] %>
+  <% end %>
   <% node["monit"]["web_interface"]["allow"].each do |allow| -%>
   allow <%= allow %>
   <% end %>
