no logging should be an option

--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -7,7 +7,7 @@ set daemon <%= node["monit"]["polling_frequency"] %>
 # Logging
 <% if node["monit"]["use_syslog"] %>
 set logfile syslog facility log_daemon
-<% else %>
+<% elsif node["monit"]["logfile"] %>
 set logfile <%= node["monit"]["logfile"] %>
 <% end %>
 
