--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -13,7 +13,7 @@ set logfile <%= node["monit"]["logfile"] %>
 
 <% if node['monit']['mail_alerts'] %>
 # Mail alerts
-set alert <%= node["monit"]["alert_email"] %>
+set alert <%= node["monit"]["alert_email"] %> <%= node["monit"]["alert_ignore_events"].empty? ? "" : "but not on { #{node["monit"]["alert_ignore_events"].join(", ")} }" %>
 <% end %>
 
 set mailserver <%= node["monit"]["mail"]["hostname"] %> port <%= node["monit"]["mail"]["port"] %>
