--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -11,6 +11,11 @@ set logfile syslog facility log_daemon
 set logfile <%= node["monit"]["logfile"] %>
 <% end %>
 
+# Set location of Monit id file
+<% if node["monit"]["idfile"] %>
+set idfile <%= node["monit"]["idfile"] %>
+<% end %>
+
 <% if node['monit']['mail_alerts'] %>
 # Mail alerts
 set alert <%= node["monit"]["alert_email"] %> <%= node["monit"]["alert_ignore_events"].empty? ? "" : "but not on { #{node["monit"]["alert_ignore_events"].join(", ")} }" %>
