cleanup `install_source` recipe:
* rubocop style fixes
* better support for redhat-derivatives
* share more logic with the `default` recipe

--- a/templates/default/monit.init.erb
+++ b/templates/default/monit.init.erb
@@ -18,7 +18,8 @@
 
 set -e
 
-. /lib/lsb/init-functions
+[ -f /lib/lsb/init-functions ] && . /lib/lsb/init-functions
+[ -f /etc/rc.d/init.d/functions ] && . /etc/rc.d/init.d/functions
 
 DAEMON="<%= @prefix %>/bin/monit"
 CONFIG="<%= @config %>"
