--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -37,8 +37,8 @@ set mailserver <%= node["monit"]["mail"]["hostname"] %> port <%= node["monit"]["
     using <%= node["monit"]["mail"]["security"] %>
 <% end -%>
   with timeout <%= node["monit"]["mail"]["timeout"] %> seconds
-<% if node["monit"]["mail"]["hostname"] -%>
-    using hostname <%= node["monit"]["mail"]["hostname"] %>
+<% if node["monit"]["mail"]["using_hostname"] -%>
+    using hostname <%= node["monit"]["mail"]["using_hostname"] %>
 <% end -%>
 
 set mail-format {
