Make pid file path customisable

--- a/templates/default/monit.init.erb
+++ b/templates/default/monit.init.erb
@@ -26,7 +26,7 @@ CONFIG="<%= @config %>"
 NAME=monit
 DESC="daemon monitor"
 MONIT_OPTS=
-PID="/run/$NAME.pid"
+PID="<%= @pidfile %>"
 
 # Check if DAEMON binary exist
 [ -f $DAEMON ] || exit 0
