Adds multiple emails for email notifications.

--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -23,7 +23,9 @@ set statefile <%= node["monit"]["statefile"] %>
 
 <% if node['monit']['mail_alerts'] %>
 # Mail alerts
-set alert <%= node["monit"]["alert_email"] %> <%= node["monit"]["alert_ignore_events"].empty? ? "" : "but not on { #{node["monit"]["alert_ignore_events"].join(", ")} }" %>
+  <% node["monit"]["alert_emails"].each do | email | %>
+    set alert <%= email %> <%= node["monit"]["alert_ignore_events"].empty? ? "" : "but not on { #{node["monit"]["alert_ignore_events"].join(", ")} }" %>
+  <% end %>
 <% end %>
 
 set mailserver <%= node["monit"]["mail"]["hostname"] %> port <%= node["monit"]["mail"]["port"] %>
