Addressing backward compatibility by allowing alert_email to take either a string or array.

--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -23,12 +23,9 @@ set statefile <%= node["monit"]["statefile"] %>
 
 <% if node["monit"]["mail_alerts"] %>
 # Mail alerts
-  <% node["monit"]["alert_emails"].each do | email | %>
+  <% Array(node["monit"]["alert_email"]).each do | email | %>
     set alert <%= email %> <%= node["monit"]["alert_ignore_events"].empty? ? "" : "but not on { #{node["monit"]["alert_ignore_events"].join(", ")} }" %>
   <% end %>
-<% end %>
-<% if node["monit"]["alert_email"] %>
-  set alert <%= node["monit"]["alert_email"] %>
 <% end %>
 
 set mailserver <%= node["monit"]["mail"]["hostname"] %> port <%= node["monit"]["mail"]["port"] %>
