--- a/templates/default/monit.init.erb
+++ b/templates/default/monit.init.erb
@@ -26,7 +26,7 @@ CONFIG="<%= @config %>"
 NAME=monit
 DESC="daemon monitor"
 MONIT_OPTS=
-PID="/run/$NAME.pid"
+PID="<%= @pidfile %>"
 
 # Check if DAEMON binary exist
 [ -f $DAEMON ] || exit 0
@@ -55,6 +55,7 @@ monit_checks () {
 
 case "$1" in
   start)
+    mkdir -p $(dirname $PID)
     log_daemon_msg "Starting $DESC" "$NAME"
     monit_checks $1
     if start-stop-daemon --start --quiet --oknodo --pidfile $PID --exec $DAEMON -- $MONIT_OPTS 1>/dev/null
