Add support for custom include paths
For example using Dokku and it's monit plugin, I need to specifically
include "/home/dokku/*/monitrc" which wasn't possible previously.

--- a/templates/default/monitrc.erb
+++ b/templates/default/monitrc.erb
@@ -72,4 +72,9 @@ set httpd port <%= node["monit"]["web_interface"]["port"] %>
 <% end %>
 
 # Include config files
-include <%= node["monit"]["includes_dir"] %>/*
+include "<%= node["monit"]["includes_dir"] %>/*"
+<% if node["monit"]["includes"] && node["monit"]["includes"].size > 0 %>
+  <% node["monit"]["includes"].each do |path| %>
+include "<%= path %>"
+  <% end %>
+<% end %>
